Debug JS loading

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 <p id="result"></p>
 
 <script>
+alert("JS is running");
+  
 let questions = [
   {
     question: "Which country is famous for sushi?",
