--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
 
 <p id="question">Loading...</p>
 
-<button class="option" onclick="checkAnswer(0)"></button>
-<button class="option" onclick="checkAnswer(1)"></button>
-<button class="option" onclick="checkAnswer(2)"></button>
-<button class="option" onclick="checkAnswer(3)"></button>
+<button onclick="checkAnswer(0)" style="display:block;width:80%;margin:10px auto;padding:12px;background:#ff9800;color:white;border:none;border-radius:6px;font-size:16px;">Option 1</button>
+
+<button onclick="checkAnswer(1)" style="display:block;width:80%;margin:10px auto;padding:12px;background:#ff9800;color:white;border:none;border-radius:6px;font-size:16px;">Option 2</button>
+
+<button onclick="checkAnswer(2)" style="display:block;width:80%;margin:10px auto;padding:12px;background:#ff9800;color:white;border:none;border-radius:6px;font-size:16px;">Option 3</button>
+
+<button onclick="checkAnswer(3)" style="display:block;width:80%;margin:10px auto;padding:12px;background:#ff9800;color:white;border:none;border-radius:6px;font-size:16px;">Option 4</button>
+
 
 <p id="result"></p>
 
