hover update red

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     }
 
     .option:hover {
-      background-color: #e68900;
+      background-color: red;
     }
   </style>
 </head>
@@ -34,40 +34,10 @@
 
 <p id="question">Loading...</p>
 
-<button
-  onclick="checkAnswer(0)"
-  onmouseover="this.style.background='#e68900'"
-  onmouseout="this.style.background='#ff9800'"
-  style="display:block;width:80%;margin:10px auto;padding:12px;background:#ff9800;color:white;border:none;border-radius:6px;font-size:16px;">
-  Option 1
-</button>
-
-<button
-  onclick="checkAnswer(1)"
-  onmouseover="this.style.background='#e68900'"
-  onmouseout="this.style.background='#ff9800'"
-  style="display:block;width:80%;margin:10px auto;padding:12px;background:#ff9800;color:white;border:none;border-radius:6px;font-size:16px;">
-  Option 2
-</button>
-
-
-<button
-  onclick="checkAnswer(2)"
-  onmouseover="this.style.background='#e68900'"
-  onmouseout="this.style.background='#ff9800'"
-  style="display:block;width:80%;margin:10px auto;padding:12px;background:#ff9800;color:white;border:none;border-radius:6px;font-size:16px;">
-  Option 3
-</button>
-
-<button
-  onclick="checkAnswer(3)"
-  onmouseover="this.style.background='#e68900'"
-  onmouseout="this.style.background='#ff9800'"
-  style="display:block;width:80%;margin:10px auto;padding:12px;background:#ff9800;color:white;border:none;border-radius:6px;font-size:16px;">
-  Option 4
-</button>
-
-
+<button class="option" onclick="checkAnswer(0)">Option 1</button>
+<button class="option" onclick="checkAnswer(1)">Option 2</button>
+<button class="option" onclick="checkAnswer(2)">Option 3</button>
+<button class="option" onclick="checkAnswer(3)">Option 4</button>
 
 <p id="result"></p>
 
